--- a/Tut2/index.html
+++ b/Tut2/index.html
@@ -4,8 +4,9 @@
 </head>
 
 <body>
+
+    <script src="index.js"></script>
     <div id="root"></div>
-    <script src="App.js"></script>
 </body>
 
 </html>
