--- a/my6/public/index.html
+++ b/my6/public/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>React App</title>
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="index.pack.js"></script>
 </body>
 
 </html>
